src/objects/InterfaceController__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Invoice_Notification__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Invoice Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Outbound__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Invoice Outbound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Shipment__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Order Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Order</label>
        <type>Checkbox</type>
    </fields>
    <label>Interface Controller</label>
</CustomObject>